--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-appconf==1.0.5
 django-filter==23.1
 django-heroku==0.3.1
 django-select2==8.1.1
+et-xmlfile==1.1.0
 Flask==2.2.3
 gunicorn==20.1.0
 idna==3.4
@@ -20,8 +21,11 @@ Jinja2==3.1.2
 legacy==0.1.6
 MarkupSafe==2.1.2
 mysql-connector==2.2.9
+mysql-connector-python @ file:///C:/Python/mysql_connector_python-8.0.32-py2.py3-none-any.whl#sha256=e0299236297b63bf6cbb61d81a9d400bc01cad4743d1abe5296ef349de15ee53
 mysqlclient==2.1.1
 nodeenv==1.7.0
+openpyxl==3.1.2
+protobuf==4.22.3
 psycopg2==2.9.6
 requests==2.28.2
 self==2020.12.3
@@ -32,4 +36,3 @@ urllib3==1.26.15
 views==0.3
 Werkzeug==2.2.3
 whitenoise==6.4.0
-openpyxl~=3.1.2
